[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "massspec_package"
version = "0.1.0"
authors = [
  { name="Iseli", email="iseli.alex.5@gmail.com" }
]
description = "A package for processing and visualizing mass spectrometry data."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "matplotlib"
]

[project.urls]
Homepage = "https://github.com/yourusername/massspec_package"
Documentation = "https://your-docs-site.com"
