[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "massspec_package"
version = "0.2.0"
authors = [
  { name="Alex Iseli", email="iseli.alex.5@gmail.com" }
]
description = "A package for processing and visualizing mass spectrometry data collected by an Aqiris ADC card."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
  "numpy",
  "matplotlib",
  "tkinter"
]

[project.urls]
Homepage = "https://github.com/Mercury2211/massspec_package"
Documentation = "https://your-docs-site.com"
